syntax = "proto3";

option csharp_namespace = "PersonalBlogGRpc";

package personalBlog;

service Articles {
  // Многостраничный список постов
  rpc getPagedList (PagedListQuery) returns (PagedListResult);
  // CRUD для поста
  rpc create (ArticleCreate) returns (IdMassage);
  rpc edit (ArticleEdit) returns (Empty);
  rpc delete (IdMassage) returns (Empty);
  rpc view (IdMassage) returns (ArticleInfo);

  // Работа с файлами
  rpc uploadFile (stream FileChunk) returns (Empty);
  rpc removeFile (RemoveFile) returns (Empty);

  // Прочее
  rpc publish (IdMassage) returns (Empty);
  rpc like (IdMassage) returns (Empty);
  rpc unlike (IdMassage) returns (Empty);
}

message IdMassage {
  int64 id = 1;
}

message PagedListQuery {
  int32 page = 1;
  int32 size = 2;
}

message PagedListResult {
  int32 page = 1;
  int32 size = 2;
  int32 totalPages = 3;
  int32 rowsCount = 4;
  repeated ArticleShort items = 5;
}

message ArticleCreate{
  string title = 1;
  string text = 2;
}

message ArticleEdit{
  int64 id = 1;
  string title = 2;
  string text = 3;
}

message ArticleShort {
  int64 id = 1;
  string title = 2;
  string text = 3;
  bool liked = 4;
  string previewUrl = 5;
  int64 likesCount = 6;
  int64 commentsCount = 7;
  bool isPublished = 8;
  int64 authorId = 9;
}

message ArticleInfo {
  int64 id = 1;
  string title = 2;
  string text = 3;
  bool isPublished = 4;
  repeated string mediaUrls = 5;
  bool liked = 6;
  int64 likesCount = 7;
  int64 commentsCount = 8;
  repeated Comment comments = 9;
  int64 authorId = 10;
}

message Comment {
  int64 authorId = 1;
  string authorName = 2;
  string authorAvatar = 3;
  string message = 4;
}

message FileChunk {
  int64 articleId = 1;
  int32 totalChunks = 2;
  bytes file = 3;
  string fileName = 4;
}

message RemoveFile {
  int64 articleId = 1;
  string fileUrl = 2;
}

message Empty {}
